fix (checkbox): checkbox in dark mode

--- a/public/assets/css/designsystem_checkbox.css
+++ b/public/assets/css/designsystem_checkbox.css
@@ -33,8 +33,8 @@
     top: 3px;
     width: 12px;
     height: 12px;
-    background-color: var(--border);
-    border: 2px solid var(--border);
+    background-color: rgba(198,200,204,0.3);
+    border: 2px solid rgba(198,200,204,0.3);
     pointer-events: none;
     -webkit-user-select: none;
     -moz-user-select: none;
